# hume_rs

./: .gitignore  Cargo.toml  README.md  run_evi_conversation.sh  run_examples.sh  run_test.sh  sample_text.txt  test_evi.sh  test_evi_final.sh
.cargo/: config.toml
docs/: custom.css  header.html
examples/: demo_all_features.rs  evi_chat.rs  evi_chat_demo.rs  evi_chat_demo_fixed.rs  evi_configs.rs  evi_connection_test.rs  evi_conversation_mac.rs  evi_debug.rs  evi_test_simple.rs  evi_tools.rs  evi_tools_comprehensive.rs  expression_measurement.rs  expression_measurement_files.rs  expression_measurement_stream.rs  test_connection.rs  tts_basic.rs  tts_comprehensive.rs  tts_streaming.rs
scripts/: generate-docs.sh
src/: lib.rs
src/core/: auth.rs  client.rs  error.rs  http.rs  mod.rs  request.rs  response.rs  retry.rs  validation.rs
src/evi/: chat.rs  configs.rs  mod.rs  models.rs  prompts.rs  tools.rs  voices.rs
src/expression_measurement/: batch.rs  mod.rs  models.rs  stream.rs
src/tts/: mod.rs  models.rs
tests/: auth_tests.rs  client_tests.rs  error_tests.rs  evi_tests.rs  expression_measurement_tests.rs  integration_test.rs  tts_tests.rs
tests/integration/: error_handling_tests.rs  evi_integration_tests.rs  expression_integration_tests.rs  mock_server_tests.rs  mod.rs  tts_integration_tests.rs  websocket_tests.rs
tests/unit/: client_tests.rs  evi_tests.rs  expression_tests.rs  http_tests.rs  mod.rs  tts_tests.rs  validation_tests.rs
